arkhe-server/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arkhe-server-service
spec:
  selector:
    app: arkhe-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
